--- a/iGrid/modules/examples/ex6/pom.xml
+++ b/iGrid/modules/examples/ex6/pom.xml
@@ -6,16 +6,22 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
+		<artifactId>examples</artifactId>
 		<version>11.1</version>
-		<artifactId>modules</artifactId>
 	</parent>
 
-	<artifactId>util</artifactId>
-	<packaging>pom</packaging>
-	<name>SORCER util</name>
-	<description>SORCER util</description>
+	<artifactId>ex6</artifactId>
+	<packaging>jar</packaging>
+	<name>SORCER example 6</name>
+	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
-	<modules>
-	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
+
 </project>
