--- a/iGrid/modules/tools/locker/pom.xml
+++ b/iGrid/modules/tools/locker/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>locker</artifactId>
 	<packaging>jar</packaging>
-	<name>SORCER locker tool</name>
+	<name>SORCER locker</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
