--- a/iGrid/modules/tools/boot/pom.xml
+++ b/iGrid/modules/tools/boot/pom.xml
@@ -53,5 +53,48 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <configuration>
+                    <includeProjectDependencies>true</includeProjectDependencies>
+                    <includePluginDependencies>false</includePluginDependencies>
+                    <executable>java</executable>
+                    <executableDependency>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>boot</artifactId>
+                    </executableDependency>
 
+                    <arguments>
+                        <argument>-DiGrid.home=${env.IGRID_HOME}</argument>
+                        <!--<argument>-Drio.home=${env.RIO_HOME}</argument>-->
+                        <argument>-Dsorcer.env.file=${env.IGRID_HOME}/configs/sorcer.env</argument>
+                        <argument>-Dwebster.tmp.dir=${env.IGRID_HOME}</argument>
+
+                        <argument>-Djava.util.logging.config.file=${env.IGRID_HOME}/configs/sorcer.logging</argument>
+                        <argument>-Djava.protocol.handler.pkgs=net.jini.url|sorcer.util.bdb.sos</argument>
+
+                        <argument>-Djava.security.policy=../../sorcer/policy/policy.all</argument>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>com.sun.jini.start.ServiceStarter</argument>
+                        <argument>../../../configs/boot-iGrid-min-http.config</argument>
+                    </arguments>
+
+                    <workingDirectory>${project.root}</workingDirectory>
+
+                    <!--<systemProperties>
+                        <systemProperty>
+                            <key>iGrid.home</key>
+                            <value>${iGrid.home}</value>
+                        </systemProperty>
+                    </systemProperties>-->
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 </project>
