--- a/iGrid/modules/tools/locker/pom.xml
+++ b/iGrid/modules/tools/locker/pom.xml
@@ -20,12 +20,12 @@
 		<dependency>
 			<groupId>net.jini</groupId>
 			<artifactId>jsk-platform</artifactId>
-			<version>2.1</version>
+			<version>${v.jini}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.jini</groupId>
 			<artifactId>jsk-lib</artifactId>
-			<version>2.1</version>
+            <version>${v.jini}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jgroups</groupId>
