browser runnable but not connecting
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@103 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/locker/pom.xml
+++ b/iGrid/modules/tools/locker/pom.xml
@@ -32,8 +32,14 @@
 			<artifactId>jgroups</artifactId>
 			<version>2.12.1.Final</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
