Added jobber provider module
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@106 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/providers/jobber/jobber-service/pom.xml
+++ b/iGrid/modules/providers/jobber/jobber-service/pom.xml
@@ -10,13 +10,13 @@
 		<artifactId>jobber</artifactId>
 	</parent>
 
-	<artifactId>jobber-api</artifactId>
+	<artifactId>jobber-service</artifactId>
 	<packaging>jar</packaging>
-	<name>SORCER jobber :: jobber-api</name>
+	<name>SORCER jobber :: jobber-service</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
-	<dependencies>
+	    <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
@@ -29,5 +29,4 @@
         </dependency>
     </dependencies>
 
-	
 </project>
