add provider archetype
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@108 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/pom.xml
+++ b/iGrid/modules/tools/pom.xml
@@ -21,5 +21,6 @@
 		<module>webster</module>
 		<module>boot</module>
 		<module>shell</module>
+		<module>sorcer-provider</module>
 	</modules>
 </project>
