break circular dependency, introduce exertlet-ui
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@110 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/pom.xml
+++ b/iGrid/modules/pom.xml
@@ -23,5 +23,6 @@
 		<module>util</module>
         <module>providers</module>
         <module>sorcer-api</module>
+        <module>exertlet-ui</module>
     </modules>
 </project>
