--- a/iGrid/modules/providers/cataloger/cataloger-ui/pom.xml
+++ b/iGrid/modules/providers/cataloger/cataloger-ui/pom.xml
@@ -18,6 +18,11 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>exertlet-ui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer</artifactId>
             <version>${project.version}</version>
         </dependency>
