--- a/iGrid/modules/exertlet-ui/pom.xml
+++ b/iGrid/modules/exertlet-ui/pom.xml
@@ -2,25 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>modules</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
         <version>11.1</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sorcer-api</artifactId>
+    <artifactId>exertlet-ui</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>net.jini</groupId>
-            <artifactId>jsk-lib</artifactId>
-            <version>${v.jini}</version>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-api</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.river</groupId>
-            <artifactId>start</artifactId>
-            <version>${v.jini}</version>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
+
 </project>
