--- a/iGrid/modules/sorcer/pom.xml
+++ b/iGrid/modules/sorcer/pom.xml
@@ -29,11 +29,11 @@
 			<artifactId>sorcer-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>jobber-api</artifactId>
 			<version>${project.version}</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>locker</artifactId>
@@ -56,11 +56,6 @@
 			<artifactId>jini-core</artifactId>
 			<version>${v.jini}</version>
 		</dependency>-->
-		<dependency>
-			<groupId>net.jini</groupId>
-			<artifactId>jsk-lib</artifactId>
-			<version>${v.jini}</version>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-servlet_3.0_spec</artifactId>
@@ -167,6 +162,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
+            <scope>test</scope>
         </dependency>
 
 
