--- a/iGrid/modules/tools/shell/pom.xml
+++ b/iGrid/modules/tools/shell/pom.xml
@@ -23,9 +23,9 @@
             <version>11.1</version>
         </dependency>
         <dependency>
-            <groupId>net.jini</groupId>
-            <artifactId>jsk-lib</artifactId>
-            <version>2.2.1</version>
+            <groupId>org.apache.river</groupId>
+            <artifactId>start</artifactId>
+            <version>${v.jini}</version>
         </dependency>
 
     </dependencies>
