Fixed webster roots
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@111 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/webster/configs/start-webster.config
+++ b/iGrid/bin/webster/configs/start-webster.config
@@ -16,8 +16,8 @@ com.sun.jini.start {
     engLibPath = "${iGrid.home}${/}lib${/}eng${/}lib";
     engLibDlPath = "${iGrid.home}${/}lib${/}eng${/}lib-dl";
     legacyLibPath = "${iGrid.home}${/}lib";   
-    exLibPath="${iGrid.home}$/{/}/lib{/}/examples/{/}lib";
-    exLibDlPath="${iGrid.home}$/{/}/lib{/}/examples/{/}lib-dl";
+    exLibPath="${iGrid.home}${/}lib${/}examples${/}lib";
+    exLibDlPath="${iGrid.home}${/}lib${/}examples${/}lib-dl";
     dataPath = "${iGrid.home}${/}data";
     deployPath = "${iGrid.home}${/}deploy";
     policy = "${java.security.policy}";
@@ -33,12 +33,12 @@ com.sun.jini.start {
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
         SorcerDescriptorUtil.getWebster(policy,
                                          port,
-                                         new String[] { engLibPath,
-                                                        engLibDlPath,
+                                         new String[] { //engLibPath,
+                                                        //engLibDlPath,
                                                         sorcerLibPath,
                                          			    sorcerLibDlPath,
                                          			    jiniLibDLPath,
-                                                        rioLibPath,
+                                                        //rioLibPath,
                                                         jiniLibPath,
                                                         dataPath,
                                                         deployPath,
@@ -49,6 +49,7 @@ com.sun.jini.start {
                                          startPort,
                                          endPort,
                                          true,
-                                         false)
+                                         false,
+                                         true)
     };
 }  
