--- a/iGrid/modules/tools/locker/pom.xml
+++ b/iGrid/modules/tools/locker/pom.xml
@@ -19,7 +19,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>net.jini</groupId>
-			<artifactId>jsk-platform</artifactId>
+			<artifactId>jsk-lib</artifactId>
 			<version>${v.jini}</version>
 		</dependency>
         <dependency>
