--- a/iGrid/modules/sorcer/pom.xml
+++ b/iGrid/modules/sorcer/pom.xml
@@ -119,6 +119,18 @@
 			<version>${v.jini}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>reggie-dl</artifactId>
+			<version>${v.jini}</version>
+            <scope>runtime</scope>
+		</dependency>
+        <dependency>
+            <groupId>org.apache.river</groupId>
+            <artifactId>reggie</artifactId>
+            <version>${v.jini}</version>
+            <scope>runtime</scope>
+        </dependency>
+		<dependency>
 			<groupId>com.sun.jini</groupId>
 			<artifactId>madison-boot</artifactId>
 			<version>1.0</version>
