Fixes in Browser config, started work on cataloger
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@114 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-iGrid-min-http.config
+++ b/iGrid/configs/boot-iGrid-min-http.config
@@ -21,11 +21,11 @@ com.sun.jini.start {
 	// webster root directories
 	sorcerLibPath 	 = home + "${/}lib${/}sorcer${/}lib";
  	sorcerLibDlPath  = home + "${/}lib${/}sorcer${/}lib-dl";
- 	engLibDlPath     = home + "${/}lib${/}eng${/}lib-dl";
- 	productLibDlPath= home + "${/}..${/}Products${/}lib${/}products${/}lib-dl";
+ 	//engLibDlPath     = home + "${/}lib${/}eng${/}lib-dl";
+ 	//productLibDlPath= home + "${/}..${/}Products${/}lib${/}products${/}lib-dl";
     jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
     jiniLibDLPath    = home + "${/}lib${/}river${/}lib-dl";
-    rioLibPath 		 = home + "${/}lib${/}rio${/}lib";
+    //rioLibPath 		 = home + "${/}lib${/}rio${/}lib";
     blitzLib		 = home + "${/}lib${/}common${/}blitz";
     otherLib		 = blitzLib + "${/}thirdpartylib";
     deployPath 		 = home + "${/}deploy";
@@ -37,22 +37,28 @@ com.sun.jini.start {
 	address = Booter.getWebsterInterface();
 	//startPort = Booter.getWebsterStartPort();
 	//endPort = Booter.getWebsterEndPort();
+	
+	repo = "${user.home}/.m2/repository";
     
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up root directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
+        // (String policy, int port, String[] roots, boolean isMaven)
         SorcerDescriptorUtil.getWebster(policy, port,
                                          new String[] { sorcerLibPath,
                                          			    sorcerLibDlPath,
-                                         			    engLibDlPath,
+                                         			    //engLibDlPath,
                                          			    jiniLibDLPath,
-                                                        rioLibPath,
+                                                        //rioLibPath,
                                                         jiniLibPath,
                                                         blitzLib,
                                                         deployPath,
                                                         httpData,
                                                         jfreechartLib,
-                                                        productLibDlPath }),
+                                                        //productLibDlPath 
+                                                        }, true),
+                                                        
+
 /*
         new SorcerServiceDescriptor(
             "browser-dl.jar jsk-dl.jar",
@@ -62,17 +68,18 @@ com.sun.jini.start {
             new String[] { home + "${/}bin${/}jini${/}configs${/}browser.config" }),
 */
 
-        new SorcerServiceDescriptor(
-            "reggie-dl.jar jsk-dl.jar",
+		new SorcerServiceDescriptor(
+            "/org/apache/river/reggie-dl/2.2.1/reggie-dl-2.2.1.jar",
             policy,
-            jiniLibPath + "/reggie.jar",
+            repo + "/org/apache/river/reggie/2.2.1/reggie-2.2.1.jar",
             "com.sun.jini.reggie.TransientRegistrarImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}reggie.config" }),
 
 		new SorcerServiceDescriptor(
-            "mahalo-dl.jar jsk-dl.jar",
+            "/org/apache/river/mahalo-dl/2.2.1/mahalo-dl-2.2.1.jar",
             policy,
-            jiniLibPath + "/mahalo.jar",
+            repo + "/org/apache/river/mahalo/2.2.1/mahalo-2.2.1.jar",
+            //jiniLibPath + "/mahalo.jar",
             "com.sun.jini.mahalo.TransientMahaloImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mahalo.config" }),
 
@@ -107,7 +114,7 @@ com.sun.jini.start {
             new String[] { home + "${/}bin${/}jini${/}configs${/}outrigger.config" }),
 */
 
-   		// Blitz
+ /*  		// Blitz
         new SorcerServiceDescriptor(
  			"blitz-dl.jar blitzui.jar",
             policy, 
@@ -121,7 +128,7 @@ com.sun.jini.start {
             	),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
-
+*/
 /*
 		// MutualExclusion - Locker
   		new SorcerServiceDescriptor(
@@ -142,29 +149,29 @@ com.sun.jini.start {
        			home + "${/}bin${/}sorcer${/}jobber${/}configs${/}jobber-prv.config"),
     
      		/* SORCER Space Service */
-        		SorcerDescriptorUtil.getSpacer(
+ /*       		SorcerDescriptorUtil.getSpacer(
        			policy, 
        			home + "${/}bin${/}sorcer${/}jobber${/}configs${/}spacer-prv.config"),
-       
+   */    
        		/* SORCER Catalog Service */
       		SorcerDescriptorUtil.getCataloger(
        			policy, 
        			home + "${/}bin${/}sorcer${/}cataloger${/}configs${/}cataloger-prv.config"),
-     			
+    			
        		/* SORCER Logger Service */
-       		SorcerDescriptorUtil.getLogger(
+/*       		SorcerDescriptorUtil.getLogger(
        			policy, 
        			home + "${/}bin${/}sorcer${/}logger${/}configs${/}logger-prv.config"),
-       			
+*/       			
        		/* SORCER ExertMonitor Service */
-       		SorcerDescriptorUtil.getExertMonitor(
+/*       		SorcerDescriptorUtil.getExertMonitor(
        			policy, 
        			home + "${/}bin${/}sorcer${/}exertmonitor${/}configs${/}exertmonitor-prv.config"),
-       			
+*/       			
        		/* SORCER Database Store Service */
-       		SorcerDescriptorUtil.getDatabaseStorer(
+/*       		SorcerDescriptorUtil.getDatabaseStorer(
        			policy, 
        			home + "${/}bin${/}sorcer${/}dbp${/}configs${/}dbp-prv.config")
- 
+*/ 
     };
 }
